--- a/src/packages.config
+++ b/src/packages.config
@@ -9,6 +9,7 @@
   <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
   <package id="Otp.NET" version="1.2.1" targetFramework="net461" />
+  <package id="QRCoder" version="1.3.5" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
@@ -17,6 +18,7 @@
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net461" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
+  <package id="System.Drawing.Common" version="4.5.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net461" />
   <package id="System.IO" version="4.3.0" targetFramework="net461" />
