converted to .net core

--- a/tests/tests.fsproj
+++ b/tests/tests.fsproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\twofa-proto.csproj" />
+    <ProjectReference Include="..\src\twofa.csproj" />
   </ItemGroup>
 
   <ItemGroup>
