--- a/example/example.csproj
+++ b/example/example.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\twofa-proto.csproj" />
+    <ProjectReference Include="..\src\twofa.csproj" />
   </ItemGroup>
 
 </Project>
